--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^5.1.0",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.1"    
+    "mysql2": "^3.14.1"
   }
 }
